start of converting tests to l3build

--- a/etexcmds.dtx
+++ b/etexcmds.dtx
@@ -134,11 +134,11 @@ and the derived files
   \file{etexcmds.drv}{\from{etexcmds.dtx}{driver}}%
   \usedir{tex/generic/oberdiek}%
   \file{etexcmds.sty}{\from{etexcmds.dtx}{package}}%
-  \usedir{doc/latex/oberdiek/test}%
-  \file{etexcmds-test1.tex}{\from{etexcmds.dtx}{test1}}%
-  \file{etexcmds-test2.tex}{\from{etexcmds.dtx}{test2}}%
-  \file{etexcmds-test3.tex}{\from{etexcmds.dtx}{test3}}%
-  \file{etexcmds-test4.tex}{\from{etexcmds.dtx}{test4}}%
+%  \usedir{doc/latex/oberdiek/test}%
+%  \file{etexcmds-test1.tex}{\from{etexcmds.dtx}{test1}}%
+%  \file{etexcmds-test2.tex}{\from{etexcmds.dtx}{test2}}%
+%  \file{etexcmds-test3.tex}{\from{etexcmds.dtx}{test3}}%
+%  \file{etexcmds-test4.tex}{\from{etexcmds.dtx}{test4}}%
   \nopreamble
   \nopostamble
   \usedir{source/latex/oberdiek/catalogue}%
