don't build xml catalogue files

--- a/etexcmds.dtx
+++ b/etexcmds.dtx
@@ -141,8 +141,8 @@ and the derived files
 %  \file{etexcmds-test4.tex}{\from{etexcmds.dtx}{test4}}%
   \nopreamble
   \nopostamble
-  \usedir{source/latex/oberdiek/catalogue}%
-  \file{etexcmds.xml}{\from{etexcmds.dtx}{catalogue}}%
+%  \usedir{source/latex/oberdiek/catalogue}%
+%  \file{etexcmds.xml}{\from{etexcmds.dtx}{catalogue}}%
 }
 
 \catcode32=13\relax% active space
