markup \url{... ctan archive path } links as \CTANpkg using the /pkg URL as definition

--- a/etexcmds.dtx
+++ b/etexcmds.dtx
@@ -728,7 +728,7 @@ and the derived files
 % \subsection{Download}
 %
 % \paragraph{Package.} This package is available on
-% CTAN\footnote{\url{https://ctan.org/pkg/etexcmds}}:
+% CTAN\footnote{\CTANpkg{etexcmds}}:
 % \begin{description}
 % \item[\CTAN{macros/latex/contrib/oberdiek/etexcmds.dtx}] The source file.
 % \item[\CTAN{macros/latex/contrib/oberdiek/etexcmds.pdf}] Documentation.
