use iftex not ofluatex package

--- a/etexcmds.dtx
+++ b/etexcmds.dtx
@@ -390,10 +390,10 @@ and the derived files
     \fi
   }%
   \TMP@RequirePackage{infwarerr}[2007/09/09]%
-  \TMP@RequirePackage{ifluatex}[2010/03/01]%
+  \TMP@RequirePackage{iftex}[2019/11/07]%
 \else
   \RequirePackage{infwarerr}[2007/09/09]%
-  \RequirePackage{ifluatex}[2010/03/01]%
+  \RequirePackage{iftex}[2019/11/07]%
 \fi
 %    \end{macrocode}
 %
@@ -720,6 +720,8 @@ and the derived files
 %   \begin{Version}{2019/12/15 v1.7}
 %   \item
 %     Documentation updates.
+%   \item
+%     Use \xpackage{iftex} package.
 %   \end{Version}
 % \end{History}
 %
